<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="dev.rranndt.storay.presentation.main.home.HomeFragment"
        android:label="@string/text_menu_title"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_homeFragment_to_addStoryFragment"
            app:destination="@id/addStoryFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="dev.rranndt.storay.presentation.main.detail.DetailFragment"
        android:label="@string/text_detail_title"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="storyResult"
            app:argType="dev.rranndt.storay.core.domain.model.StoryResult" />
    </fragment>
    <fragment
        android:id="@+id/addStoryFragment"
        android:name="dev.rranndt.storay.presentation.main.addstory.AddStoryFragment"
        android:label="@string/text_add_story_title"
        tools:layout="@layout/fragment_add_story" >
        <action
            android:id="@+id/action_addStoryFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>