<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.main.addstory.AddStoryFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivPreviewPhoto"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/content_description_preview_photo"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_add_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:shapeAppearanceOverlay="@style/roundedCornersImageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescription"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edit_text_default"
        app:layout_constraintEnd_toStartOf="@id/btnSend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPreviewPhoto">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/hint_description"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLines="6"
            android:padding="16dp"
            android:textColor="@color/black_100"
            android:textColorHint="@color/black_100"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/content_description_button_upload"
        android:src="@drawable/ic_send"
        app:layout_constraintBottom_toBottomOf="@id/tilDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tilDescription" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>